tests/errors/bugsInputError/pe01.ledger

2016-12-14  missing value and missing second account
	Expenses:E01

